--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      
+      Inicio
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,12 +10,35 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">Inicio</ion-title>
     </ion-toolbar>
   </ion-header>
 
+  <div id="logo">
+    <img src="assets/imagenes/logo del colegio.png" alt="logo del colegio">
+  </div>
+
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <ion-list>
+      <ion-item>
+        <ion-label>
+          Usuario
+        </ion-label>
+        <ion-input [(ngModel)]="usuario" slot="end" type="text" placeholder="Ingresar usuario"></ion-input>
+  
+      </ion-item>
+      <ion-item>
+        <ion-label>
+          Contraseña
+        </ion-label>
+        <ion-input [(ngModel)]="pass" slot="end" type="password" placeholder="Ingresar"></ion-input>
+  
+      </ion-item>
+    </ion-list>
+    <h1>-------------------------------------------</h1>
+    <ion-button (click)="ingresar()" expand="block"  color="success">Ingresar</ion-button>
+    <p>¿No estás registrado? <a routerLink="/registro" routerLinkActive="Active">REGISTRATE</a></p>
+    <p>¿No recuerdas tu clave?</p>
+    <a routerLink="/newpassword" routerLinkActive="Active">RECUPERAR CONTRASEÑA</a>
   </div>
 </ion-content>
