--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,22 @@
 #container {
   text-align: center;
-
   position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
+  left: 15%;
+  right: 15%; 
+  top: 70%;
   transform: translateY(-50%);
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+#logo {
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+#logo img {
+  width: 350px;
+  height: auto;
+  border-radius: 50%;
 }
